--- a/src/Meals/AvailableMeals.module.css
+++ b/src/Meals/AvailableMeals.module.css
@@ -10,7 +10,14 @@
     margin: 0;
     padding: 0;
   }
-  
+  .Mealisloading{
+    text-align: center;
+    color: white;
+  }
+  .Error{
+    text-align: center;
+    color: red;
+  }
   @keyframes meals-appear {
     from {
       opacity: 0;
